Fixed spacing issues

--- a/style/style.css
+++ b/style/style.css
@@ -18,12 +18,6 @@ body {
   width: 100%;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  padding: 1em;
-}
-
 .title {
   /* font-size: var(--title-fz); */
   /* font-family: 'Raleway', sans-serif;
